# ws-scale

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
app/: __init__.py  example.py  settings.py
app/ids/: master.py  node.py
src/: example.py  settings.py
src/wsscale/: __init__.py
src/wsscale/cache/: redis.py
src/wsscale/ids/: master.py  node.py  storage.json
src/wsscale/storage/: json.py
src/wsscale/ws/: server.py
tests/: test_id_generator_master.py  test_id_generator_node.py  test_websocket_server.py
