[project]
name = "ws-scale"
version = "0.1.0"
description = "A websocket server application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "websockets>=16.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

authors = [
  { name="Ndemanou steve", email="ndemanousteve@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/stevinho29/ws-scale"
Issues = "https://github.com/stevinho29/ws-scale/issues"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"